--- a/font1.css
+++ b/font1.css
@@ -2,3 +2,5 @@
   font-family: 'mainBold';
   src: url('https://cdn.jsdelivr.net/gh/SemKry/annaprofiruicons@main/Strobos/Gilroy-Semibold.ttf') format('truetype');
 }
+
+/*123*/
